--- a/index.html
+++ b/index.html
@@ -4,10 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-</head>
-<body>
     <h1>Erick Alexander Herrera Jimenez</h1>
     <h2>Programador</h2>
-    <h2>erixkhj1@gmail.com</h2>
+    <h3>erixkhj1@gmail.com</h3>
+</head>
+<body>
+<h2>Educación</h2>
 </body>
 </html>
