--- a/index.html
+++ b/index.html
@@ -7,8 +7,31 @@
     <h1>Erick Alexander Herrera Jimenez</h1>
     <h2>Programador</h2>
     <h3>erixkhj1@gmail.com</h3>
+    <h3>7242-8137</h3>
+    <h3>Hatillo 6 sur, Avenida Los Andes, Alameda 8, casa 764</h3>
 </head>
 <body>
-<h2>Educación</h2>
+
+    <div>
+    <h2>Educación</h2>
+    <h3>Colegio</h3>
+    <h4>Liceo R</h4>
+    </div>
+
+        <div>
+        <h2>Cursos y especializaciones</h2>
+        <h3>Inglés</h3>
+        <h3>Programacion</h3>
+        </div>
+
+            <div>
+            <h2>Inglés</h2>
+            <h2>Programacion</h2>
+            </div>
+
+                <div>
+                    <h2>Experiencia laboral</h2>
+                    <h3>...</h3>
+                </div>
 </body>
 </html>
