Añadi una imagen place holder para mi foto

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <h3>erixkhj1@gmail.com</h3>
     <h3>7242-8137</h3>
     <h3>Hatillo 6 sur, Avenida Los Andes, Alameda 8, casa 764</h3>
+    <img src="/Curriculum/Estilos/Pollo.png" alt="FotoMia">
 </head>
 <body>
 
