--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                        <h2 >Experiencia laboral</h2>
                        <h3>Industrias López</h3>
                        <h3>Producción audiovisual</h3>
-                       <ul style="border-bottom: 2px solid black;">
+                       <ul class="borde">
                         <p>Lorem ipsum dolor sit amet, consectatur <br>
                             adipiscing elit, sed do eiusmod tempor incidunt <br>
                             ut labore et dolore magna alqua. Ut enim ad minim <br>
@@ -59,11 +59,11 @@
                     </ul>
                     <h3>Cine Regis.</h3>
                     <h3>Producción audiovisual</h3>
-                    <ul style="border-bottom: 2px solid black;">
+                    <ul class="borde">
                         <p>Lorem ipsum dolor sit amet consectetur <br> adipisicing elit. Numquam laudantium et eos reprehenderit vitae distinctio. <br> Tempora harum, culpa neque amet fugiat distinctio maiores sapiente voluptatem <br>rerum iste voluptatibus, quod tempore.</p>
                     </ul>
                     <h3>Salford y asociados</h3>
-                    <ul style="border-bottom: 2px solid black;">
+                    <ul class="borde">
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. <br> Impedit optio quasi commodi placeat? Incidunt architecto commodi illo animi,<br> possimus vel non nostrum reiciendis molestiae officia dicta illum odio amet laborum!</p>
                     </ul>
                     </div>
